ipad header alignment issue

--- a/css/hpit.css
+++ b/css/hpit.css
@@ -2219,13 +2219,15 @@ img {
 	}
 	.container > .navbar-collapse {
 		float: right;
+		width: 100% !important;
+		background-color: red;
 	}
 	.navbar-nav {
 		width: 100% !important;
+		background-color: pink;
 	}
 	.navbar-nav > li {
 		width: auto;
-		width: 100% !important;
 	}
 	.navbar-default .navbar-nav > li > a {
 		white-space: nowrap;
